--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -16,7 +16,7 @@ html,
 body {
   padding: 0;
   margin: 0;
-  font-family: "Mazzard-Regular", sans-serif;
+  font-family: "Gilroy-Regular", sans-serif;
   color: $color-text;
 }
 
