--- a/src/styles/fonts.scss
+++ b/src/styles/fonts.scss
@@ -75,11 +75,20 @@
   font-display: swap;
 }
 
+@font-face {
+  font-family: "Gilroy-ExtraBold";
+  src: url("/fonts/Gilroy/Gilroy-Extrabold.ttf");
+  font-display: swap;
+}
+
 .font-mazzard-bold{
   font-family: "Mazzard-Bold", sans-serif;
 }
 .font-gilroy-bold{
   font-family: "Gilroy-Bold", sans-serif;
+}
+.font-gilroy-extra-bold{
+  font-family: "Gilroy-ExtraBold", sans-serif;
 }
 .font-gilroy-regular{
   font-family: "Gilroy-Regular", sans-serif;
