--- a/src/styles/new.scss
+++ b/src/styles/new.scss
@@ -117,4 +117,15 @@ $color-text: #531800;
       }
     }
   }
-}
+
+
+
+  &.new-content-three {
+    width: 100vw;
+    height: 100vh;
+    background-image: url("../images/new/NewContentThreeBackgroundImg.png");
+
+    background-size: 100% 100%;
+
+  }
+  }
