--- a/src/styles/new.scss
+++ b/src/styles/new.scss
@@ -250,9 +250,6 @@ html,body{
     }
   }
 
-
-
-
   &.new-content-five{
     width: 100vw;
     height: 100vh;
@@ -325,5 +322,309 @@ html,body{
       }
     }
   }
+
+
+  &.new-content-eight {
+    width: 100vw;
+    height: 100vh;
+    background-image: url("../images/new/NewContentEightBackgroundImg.png");
+
+    background-size: 100% 100%;
+
+    .sub-content{
+      width: 28.64vw;
+      margin-top: 17.33vh;
+      margin-left: 7.81vw;
+      margin-bottom: 4.44vh;
+      h1{
+        color: #fff;
+        font-size: 2.91vw;
+      }
+
+      .childs{
+
+        display: flex;
+        background-color: rgba(53, 32, 21, 0.5);
+        border-radius: 1.45vw;
+        margin-top: 2.66vh;
+        //padding-top: 2.66vh;
+
+        height: 13.33vh;
+
+        align-items: center;
+
+        span{
+          background-color: rgba(255, 255, 255, 0.21);
+          width: 3.75vw;
+          height: 3.75vw;
+          border-radius: 1.45vw;
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          margin-left: 1.25vw;
+          margin-right: 1.25vw;
+
+          img{
+
+            width: 1.66vw;
+            height: 1.66vw;
+          }
+        }
+
+        .childs-right-content{
+          h3{
+            color: #fff;
+            font-size: 1.04vw;
+            margin: 0;
+            padding: 0;
+
+          }
+          p{
+            font-size: 0.63vw;
+            line-height: 2vh;
+            padding: 0;
+            color: #fff;
+            margin: 0;
+            margin-top: 0.3vh;
+
+          }
+        }
+      }
+    }
+  }
+
+
+
+  &.new-content-nine {
+    width: 100vw;
+    height: 100vh;
+
+    position: relative;
+
+
+
+    .shortLine{
+      position: absolute;
+      bottom: 0;
+      right: 0;
+      width: 25vw;
+    }
+
+    .longLine{
+      position: absolute;
+      width: 100vw;
+
+      top: 21vh;
+      z-index: -1;
+    }
+
+    .sub-content{
+      display: flex;
+     .left-child-content{
+
+       margin-top: 25.55vh;
+
+       margin-left: 7.81vw;
+       width: 33.5vw;
+       h1{
+         color: $color-text;
+         font-size: 2.5vw;
+
+       }
+       p{
+         color: #594D6D;
+
+         line-height: 3.33vh;
+         font-size: 0.9vw;
+         margin-top: 3.33vh;
+       }
+
+       .sub-content-child{
+         display: flex;
+         justify-content: space-between;
+
+         .first-child{
+           h2{
+             color: $color-orange;
+             font-size: 0.9vw;
+
+           }
+           p{
+             margin-top: 1.33vh;
+             font-size: 0.83vw;
+             line-height: 2.88vh;
+
+           }
+         }
+
+         .second-child{
+           h2{
+             color: $color-orange;
+             font-size: 0.9vw;
+
+           }
+           p{
+             line-height: 2.88vh;
+
+             font-size: 0.83vw;
+             margin-top: 1.33vh;
+           }
+         }
+       }
+     }
+
+
+      .right-child-content{
+        img{
+          width: 47.86vw;
+          height: 72.2vh;
+          margin-top: 18.33vh;
+          margin-left: 3.43vw;
+        }
+      }
+
+    }
+  }
+
+
+
+  &.new-content-eleven{
+    .sub-content{
+      display: flex;
+      .left-eleven-content{
+        margin-left: 7.81vw;
+        margin-top: 27.11vh;
+        width: 24vw;
+        h1{
+
+          font-size: 2.5vw;
+          line-height: 6.22vh;
+          color: $color-text;
+        }
+        p{
+          color: #594D6D;
+
+          line-height: 3.33vh;
+          margin-top: 3.33vh;
+        }
+      }
+      .right-img-group{
+
+        width: 57.81vw;
+        display: flex;
+        margin-top: 18vh;
+        margin-left: 2.13vw;
+        justify-content: space-between;
+        .right-img-group-child{
+
+          width: 18.22vw;
+          height: 100%;
+
+
+          display: flex;
+          flex-direction: column;
+
+
+            img{
+              height: 47%;
+            }
+
+          img:nth-child(2){
+            margin-top: auto;
+          }
+
+
+
+        }
+      }
+      .right-img-group-child:nth-child(1){
+        border-radius: 30px;
+      }
+    }
+  }
+
+
+
+  &.new-content-twelve {
+    width: 100vw;
+    height: 100vh;
+
+
+
+    .sub-content{
+      display: flex;
+
+
+      .left-child-content{
+        img{
+          width: 47.86vw;
+          height: 72.2vh;
+          margin-top: 16.22vh;
+          margin-left: 7.81vw;
+          border-radius: 40px;
+        }
+      }
+
+
+      .right-child-content{
+
+        margin-top: 19.66vh;
+
+        margin-left: 2.91vw;
+        width: 33.5vw;
+        h1{
+          color: $color-text;
+          font-size: 2.5vw;
+
+        }
+        p{
+          color: #594D6D;
+
+          line-height: 3.33vh;
+          font-size: 0.9vw;
+          margin-top: 3.33vh;
+        }
+
+        .sub-content-child{
+          display: flex;
+
+          .first-child{
+            h2{
+              color: $color-orange;
+              font-size: 0.9vw;
+
+            }
+            p{
+              margin-top: 1.33vh;
+              font-size: 0.83vw;
+              line-height: 2.88vh;
+
+            }
+          }
+
+          .second-child{
+
+
+            margin-left: 2.08vw;
+            h2{
+              color: $color-orange;
+              font-size: 0.9vw;
+
+            }
+            p{
+
+              line-height: 2.88vh;
+              font-size: 0.83vw;
+              margin-top: 1.33vh;
+            }
+          }
+        }
+      }
+
+
+
+    }
+  }
+
 
   }
