--- a/src/styles/new.scss
+++ b/src/styles/new.scss
@@ -1133,7 +1133,6 @@ html,body{
 
   &.about-us-one-mobile{
 
-    height: 100vh;
     padding: 0  20px ;
     .header-img{
       width: 335px;
@@ -1193,4 +1192,79 @@ html,body{
     }
   }
 
+
+  &.about-us-two-mobile{
+
+
+
+    .sub-content{
+
+
+
+      .left-img{
+        margin: 0 20px ;
+
+        border-radius: 30px;
+        width: 335px;
+        height: 262px;
+      }
+
+      .right-content{
+
+
+        h1{
+          font-size: 24px;
+          line-height: 34px;
+          margin: 20px 15px;
+        }
+
+        p{
+
+          font-size: 14px;
+          line-height: 24px;
+          color: #594D6D;
+          text-align: center;
+
+          font-weight: 600;
+          margin-left: 15px;
+          margin-right: 15px;
+          margin-bottom: 30px;
+        }
+
+
+        .right-content-numbers{
+          display: flex;
+
+          padding-left: 15px;
+          padding-right: 15px;
+
+          flex-wrap: wrap;
+          justify-content: space-between;
+          .numbers-child{
+            text-align: center;
+            width: 40%;
+            h3{
+              color: $color-orange;
+              font-size: 32px;
+
+              margin-top: 30px;
+              margin-bottom: 10px;
+            }
+
+
+            p{
+              font-size: 18px;
+              line-height: 24px;
+              margin: 0;
+              font-weight: 500;
+              padding: 0;
+            }
+          }
+          .numbers-child:nth-child(4){
+            margin-right: 0;
+          }
+        }
+      }
+    }
+  }
 }
