--- a/src/styles/new.scss
+++ b/src/styles/new.scss
@@ -1444,4 +1444,383 @@ html,body{
     }
   }
 
+
+
+
+  &.location-three-mobile {
+
+    background: #271006;
+
+    .sub-content{
+
+      margin-bottom: 50px;
+
+      .location-three-mobile{
+        width: 100%;
+        //height: 477px;
+        border-top-left-radius: 90px;
+
+      }
+
+
+      .rightLine{
+        position: absolute;
+        right: 0;
+        top: 385px;
+      }
+      h1{
+        color: #fff;
+
+        font-size: 26px;
+        line-height: 32px;
+        margin-top: 30px;
+
+        margin-left: 20px;
+
+      }
+
+      .childs{
+
+        display: flex;
+        background-color: rgba(53, 32, 21, 0.5);
+
+        margin-top: 20px;
+
+        margin-left: 20px;
+        margin-right: 20px;
+        padding: 14px;
+        align-items: center;
+        border-radius: 16px;
+        width: 335px;
+        height: 82px;
+        span{
+          background-color: rgba(255, 255, 255, 0.21);
+
+          display: flex;
+          justify-content: center;
+          align-items: center;
+
+          width: 44px;
+          height: 44px;
+          border-radius: 16px;
+          padding: 10px;
+          img{
+
+            width: 19px;
+            height: 19px;
+          }
+        }
+
+        .childs-right-content{
+
+          width: 260px;
+          margin-left: 14px;
+          h3{
+            color: #fff;
+
+            margin: 0;
+            padding: 0;
+            font-size: 18px;
+            line-height: 19px;
+          }
+          p{
+
+            padding: 0;
+            color: #fff;
+            margin-top: 6px;
+            font-size: 9px;
+            line-height: 12px;
+
+          }
+        }
+      }
+    }
+  }
+
+  &.about-us-three-mobile {
+
+
+    position: relative;
+
+    .sub-content{
+
+      padding: 20px;
+      .left-child-content{
+
+        h1{
+          color: $color-text;
+          font-size: 32px;
+          line-height: 36px;
+
+        }
+        p{
+          color: #594D6D;
+
+          font-size: 16px;
+          line-height: 26px;
+          margin-top: 30px;
+          margin-bottom: 20px;
+        }
+
+        .sub-content-child{
+          display: flex;
+          justify-content: space-between;
+
+          margin-top: 30px;
+          margin-bottom: 40px;
+          .first-child{
+            h2{
+              color: $color-orange;
+              font-size: 14px;
+              line-height: 26px;
+
+            }
+            p{
+
+              font-size: 12px;
+              line-height: 20px;
+            }
+          }
+
+          .second-child{
+            h2{
+              color: $color-orange;
+
+              font-size: 14px;
+              line-height: 26px;
+
+            }
+            p{
+
+              font-size: 12px;
+              line-height: 20px;
+            }
+          }
+        }
+      }
+
+
+      .right-child-content{
+        img{
+          width: 335px;
+        }
+      }
+
+    }
+  }
+
+  &.contacts-mobile-one{
+
+    .right-line{
+      position: absolute;
+      right: 0;
+      margin-top: 200px;
+    }
+    .sub-content{
+
+      padding: 20px;
+      .left-eleven-content{
+
+        h1{
+          font-size: 32px;
+          line-height: 36px;
+        }
+        p{
+          font-size: 16px;
+          line-height: 30px;
+        }
+      }
+      .right-img-group{
+
+        display: flex;
+        .right-img-group-child{
+
+
+
+          display: flex;
+          flex-direction: column;
+          margin-right: 20px;
+
+
+
+          img:nth-child(2){
+
+            margin-top: auto;
+          }
+
+
+
+        }
+      }
+
+    }
+
+  }
+
+
+
+
+
+
+
+
+
+
+
+  &.contacts-mobile-two{
+    position: relative;
+
+    .new-content-six-big-line{
+      position: absolute;
+      left: 0;
+      right: 0;
+
+    }
+
+    .new-content-six-line{
+      position: absolute;
+      left: 0;
+      top: 0;
+
+
+    }
+
+    .new-content-thirty-left{
+      position: relative;
+      padding-left: 20px;
+      padding-right: 20px;
+      h3{
+        font-size: 32px;
+        line-height: 38px;
+        padding-bottom: 10px;
+      }
+      p{
+
+        color: #594D6D;
+        font-size: 16px;
+        line-height: 30px;
+      }
+      span{
+        display: none;
+      }
+    }
+
+    .new-content-thirty-center{
+
+      padding-left: 20px;
+      padding-right: 20px;
+      position: relative;
+
+      p{
+
+        margin-top: 40px;
+
+        text-transform: uppercase;
+        color: #FF6629;
+        mix-blend-mode: normal;
+        font-weight: 500;
+        font-size: 14px;
+        line-height: 17px;
+
+      }
+      .tel{
+        font-size: 26px;
+        line-height: 32px;
+        &.mb{
+
+          display: block;
+        }
+      }
+      .files{
+        display: flex;
+        align-items: center;
+
+        color: #62B3FF;
+
+
+        margin-top: 22px;
+
+        span{
+
+
+          margin-right: 18px;
+          background-color: #62B3FF;
+
+        }
+      }
+    }
+
+    .new-content-thirty-right{
+      position: relative;
+      padding-left: 20px;
+      margin-top: 50px;
+      padding-right: 20px;
+      h3{
+        font-size: 32px;
+        line-height: 38px;
+      }
+      p{
+        font-size: 16px;
+        line-height: 30px;
+        color: #594D6D;
+
+      }
+
+      input{
+        display: block;
+        border: none;
+        outline: 0;
+        background: #EAE7E5;
+        border-radius: 14px;
+        width: 100%;
+        font-size: 20px;
+        line-height: 26px;
+        height: 74px;
+
+        padding-left: 20px;
+        margin-top: 30px;
+        &::placeholder{
+          color: #531800;
+
+          mix-blend-mode: normal;
+          opacity: 0.5;
+        }
+      }
+      button{
+        background: #FF6629;
+        border: 1px solid rgba(83, 24, 0, 0.3);
+        border-radius: 90px;
+
+        color: #Ffffff;
+
+
+        outline: 0;
+
+        display: block;
+        cursor: pointer;
+        transition: all 0.3s linear;
+
+        font-size: 20px;
+        line-height: 25px;
+
+        width: 100%;
+        height: 64px;
+
+        margin-top: 36px;
+        margin-bottom: 30px;
+        &:active{
+          transform: scale(0.9);
+        }
+      }
+      .footer-con{
+        font-size: 16px;
+        line-height: 20px;
+
+        width: 100%;
+
+        text-align: center;
+        color: #594D6D;
+      }
+    }
+  }
 }
